# ZK-Battleships-Solana

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json  test_output.txt  tsconfig.json
circuits/: board.circom  shot.circom  winner.circom
circuits/artifacts/: board_verification_key.json  shot_verification_key.json
circuits/artifacts/setup/: board.r1cs  shot.r1cs
circuits/artifacts/setup/board_js/: board.wasm
circuits/artifacts/setup/shot_js/: shot.wasm
circuits/artifacts/setup/zkey/: board_0000.zkey  board_0001.zkey  board_0002.zkey  board_0003.zkey  board_final.zkey  shot_0000.zkey  shot_0001.zkey  shot_0002.zkey  (+2 more)
circuits/templates/: hitShip.circom  placeShip.circom  poseidonDecrypt.circom  shipRange.circom
game-cli/: cli.ts
game-cli/cli/: game.ts  instructions.ts  keys.ts  playground.ts  validateCoords.ts
programs/zk-battleship/: Cargo.toml
programs/zk-battleship/src/: board_verifying_key.rs  errors.rs  lib.rs  shot_verifying_key.rs
programs/zk-battleship/src/instructions/: finalize_game.rs  join_game.rs  mod.rs  new_game.rs  opening_shot.rs  play.rs
programs/zk-battleship/src/state/: game.rs
scripts/: circuits.sh  parse_verifyingkey.js  ptau.sh
src/: Battleship.ts  battleShipClient.ts  battleshipClient.ts  gameSimulation.ts  poseidonEnc.ts  utils.ts
src/poseidon_encryption/: index.ts
src/poseidon_encryption/circuits/: poseidonDecrypt2.circom  poseidonDecrypt2.r1cs  poseidonDecrypt2.zkey
src/poseidon_encryption/test/: poseidonEncryption.test.ts
test/: circuits.test.ts  game.test.ts
tests/: zk-battleship.ts
(+1 files in other folders)
