[package]
name = "zk-battleship"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zk_battleship"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
#solana
solana-program = "1.15.2"
# Light Deps
groth16-solana = "0.0.1"
ark-ec = "0.3.0"
ark-ff = "0.3.0"
ark-bn254 = "0.3.0"
getrandom = { version = "0.2.2", features = ["custom"] }


